compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_subprog_ty_from_function.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "function sha(a : int, b : char) : int end sha"
---
"sha"@(FileId(1), 9..12) [Declared]: function ( pass(value) int, pass(value) char, ) -> int
"<unnamed>"@(dummy) [Undeclared]: <error>
"a"@(FileId(1), 13..14) [Declared]: int
"b"@(FileId(1), 22..23) [Declared]: char
"<root>"@(dummy) [Declared]: <error>

