compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_subprog_ty_from_procedure.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
assertion_line: 41
expression: "procedure sha(a : int, b : char) end sha"

---
"sha"@(FileId(1), 10..13) [Declared]: procedure ( pass(value) int, pass(value) char, ) -> void
"<unnamed>"@(dummy) [Declared]: <error>
"a"@(FileId(1), 14..15) [Declared]: <error>
"b"@(FileId(1), 23..24) [Declared]: <error>
"<root>"@(dummy) [Declared]: <error>

