compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_type_alias_from_const.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
assertion_line: 41
expression: "const a : int type k : a"

---
"a"@(FileId(1), 6..7) [Declared]: int
"k"@(FileId(1), 19..20) [Resolved(Type)]: alias[DefId(LibraryId(0), LocalDefId(1))] of <error>
"<root>"@(dummy) [Declared]: <error>

error in file FileId(1) at 23..24: cannot use `a` as a type
| error in file FileId(1) for 23..24: `a` is a reference to a constant
