compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_type_alias_normal.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
assertion_line: 41
expression: "type a : int var _ : a"

---
"a"@(FileId(1), 5..6) [Resolved(Type)]: alias[DefId(LibraryId(0), LocalDefId(0))] of int
"_"@(FileId(1), 17..18) [Declared]: ref_mut alias[DefId(LibraryId(0), LocalDefId(0))] of int
"<root>"@(dummy) [Declared]: <error>

